<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/training_programs" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommended"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marathon"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="@dimen/_8sdp"
            android:textSize="@dimen/_16ssp" />

        <androidx.viewpager.widget.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</layout>