<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/rlZippy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_40sdp"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/warm_up_title"
            android:layout_below="@id/rlZippy"
            android:textSize="@dimen/_14ssp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_50ssp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            tools:text="00:30"/>

        <LinearLayout
            android:layout_below="@id/tvTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpSec"
                android:layout_width="@dimen/_105sdp"
                android:layout_height="wrap_content"
                android:text="@string/seconds_up"
                android:layout_weight="0.5"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/bg_button_black"/>

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="@dimen/_105sdp"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/colorPrimary"
                android:backgroundTint="@color/colorBlack"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:layout_weight="0.5"
                android:backgroundTintMode="screen"
                android:background="@drawable/bg_button_black"/>

        </LinearLayout>

    </RelativeLayout>
</layout>
