<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:transitionName="@string/transition_description"
                tools:src="@drawable/training_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_70sdp"
                android:background="@drawable/bg_description"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvProgramTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/program_title"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/tvTrainingName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_24ssp"
                    android:textStyle="bold"
                    tools:text="Начинающий" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textColor="@color/colorBlack"
                    tools:text="Научись бегать и прогрессируй(4-6 недель)" />

                <TextView
                    android:id="@+id/tvFull"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:textColor="@color/colorBlack"
                    tools:text="Экипировка - правильно подобранная экипировка обеспечит комфорт, поможет значительно улучшить свои результаты и установить новые личные рекорды. Чтобы не было травм и лучше подготовиться к бегу, не забывайте разимнаться перед богом, для этого у нас в приложении есть функция “Разминка”. Как только дистанция преодолена, не следует резко останавливаться, нужно перейти на медленный шаг, успокоить дыхание, сделать несколько упражнений на растяжку. В случае недомогания лучше пропустить тренировку " />

            </LinearLayout>

            <Button
                android:id="@+id/btnStart"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_alignParentBottom="true"
                android:text="@string/beginning" />

        </RelativeLayout>
    </ScrollView>
</layout>
