<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_340sdp"
            android:background="@drawable/bg_login" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:src="@drawable/ic_logo_title" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivLogo"
            android:layout_marginStart="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_38sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            app:cardCornerRadius="@dimen/_16sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp">

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:padding="6dp"
                    android:text="@string/login_title"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvSignUp"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@android:color/white"
                    android:hint="@string/input_login"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/colorRed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingLeft="0dp"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilLogin"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@android:color/white"
                    android:hint="@string/input_password"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/colorRed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:paddingLeft="0dp"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tilPassword"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvForgetPassword"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_26sdp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/login"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp" />

                <View
                    android:id="@+id/divider"
                    android:layout_below="@id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:background="@color/colorGray"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:id="@+id/layoutOtherLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/btnGoogle"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/actionBarItemBackground"
                        android:src="@drawable/ic_google"
                        android:textColor="@android:color/white" />

                    <ImageView
                        android:id="@+id/btnFacebook"
                        android:layout_width="@dimen/_32sdp"
                        android:layout_height="@dimen/_32sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/actionBarItemBackground"
                        android:src="@drawable/ic_facebook"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</layout>