<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingEnd="16dp"
            android:paddingStart="6dp"
            app:contentInsetStartWithNavigation="0dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/rlRun"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/llFinishData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:weightSum="0.8">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tvFinishDistanceKm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tvFinishDistance"
                        android:layout_alignEnd="@id/tvFinishDistance"
                        android:gravity="center_horizontal"
                        android:text="0.00"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tvFinishDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvFinishDistanceKm"
                        android:text="@string/kilometers" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center_horizontal">

                    <Chronometer
                        android:id="@+id/tvFinishTimeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tvFinishTime"
                        android:layout_alignEnd="@id/tvFinishTime"
                        android:gravity="center_horizontal"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tvFinishTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvFinishTimeCount"
                        android:text="@string/time" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/tvFinishTempCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/tvFinishTemp"
                        android:layout_alignEnd="@id/tvFinishTemp"
                        android:gravity="center_horizontal"
                        android:text="0"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tvFinishTemp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvFinishTempCount"
                        android:text="@string/middle_temp" />
                </RelativeLayout>
            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/llFinishData"
                android:paddingLeft="@dimen/_15ssp"
                android:paddingRight="@dimen/_15ssp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Как твое настроение?" />

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:max="10"
                    android:progress="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilTrainingName" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilTrainingName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/seekBar"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@android:color/white"
                    android:hint="@string/training_name"
                    android:textStyle="bold"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/colorRed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTrainingName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/_12ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnRunningFinishSave"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/save"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12ssp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>